# muscle-mem-agent

./: .gitignore  README.md  README_zh.md  pyproject.toml
muscle_mem/: cli_app.py
muscle_mem/agents/: agent.py  grounding.py  infeasible_agent.py  motor_code_agent.py  subagent.py  tool_loop.py  verification_agent.py  worker.py
muscle_mem/agents/tools/: __init__.py  exec_tools.py  registry.py  scratchpad.py  todo.py  ui_actions.py
muscle_mem/core/: engine.py  mllm.py  module.py
muscle_mem/memory/: procedural_memory.py
muscle_mem/utils/: common_utils.py  formatters.py  local_env.py  model_test.py
osworld_setup/: OSWorld.md  OSWorld_zh.md  run_muscle_mem_agent.py  run_muscle_mem_agent_local.py
